--- a/styles.css
+++ b/styles.css
@@ -95,3 +95,96 @@
         align-items: center;
     }
 }
+
+.sppSceleton {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+    margin-bottom: 8px;
+    margin-top: 8px;
+
+    div {
+        width: 100%;
+        border-radius: 8px;
+        background: linear-gradient(-45deg, #DDDDDD, #F0F0F0, #DDDDDD, #F0F0F0);
+        background-size: 400% 400%;
+        -webkit-animation: Gradient 2.25s ease infinite;
+        -moz-animation: Gradient 2.25s ease infinite;
+        animation: Gradient 2.25s ease infinite;
+    }
+
+    .flexRow {
+        display: flex;
+        flex-direction: row;
+        gap: 4px;
+        background: none;
+        -webkit-animation: none;
+        -moz-animation: none;
+        animation: none;
+    }
+    .pulsate1 {
+        width: 20%;
+        height: 48px;
+    }
+
+    .pulsate2 {
+        width: 80%;
+        height: 48px;
+    }
+    .pulsate3 {
+        height: 28px;
+    }
+    .pulsate4 {
+        width: 20%;
+        height: 23px;
+    }
+    .pulsate5 {
+        width: 80%;
+        height: 23px;
+    }
+    .pulsate6 {
+        width: 20%;
+        height: 23px;
+    }
+    .pulsate7 {
+        width: 80%;
+        height: 23px;
+    }
+}
+
+@-webkit-keyframes Gradient {
+    0% {
+        background-position: 0 50%
+    }
+    50% {
+        background-position: 100% 50%
+    }
+    100% {
+        background-position: 0 50%
+    }
+}
+
+@-moz-keyframes Gradient {
+    0% {
+        background-position: 0 50%
+    }
+    50% {
+        background-position: 100% 50%
+    }
+    100% {
+        background-position: 0 50%
+    }
+}
+
+@keyframes Gradient {
+    0% {
+        background-position: 0 50%
+    }
+    50% {
+        background-position: 100% 50%
+    }
+    100% {
+        background-position: 0 50%
+    }
+}
