--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,11 @@
 .sppWidget {
+    padding: 16px 20px 20px;
+    box-shadow: 0 2px 16px rgba(0,0,0,.08);
+    border-radius: 16px;
     display: flex;
     width: 100%;
     flex-direction: column;
     gap: 8px;
-    margin-top: 8px;
-    margin-bottom: 8px;
 
     div {
         border-radius: 8px;
@@ -97,7 +98,7 @@
 }
 
 .sppExtensionWidget {
-    margin-bottom: 20px;
+    margin-bottom: 12px;
     img {
         border-radius: 16px;
         width: 100%;
@@ -108,11 +109,12 @@
 
 .sppSceleton {
     width: 100%;
+    padding: 16px 20px 20px;
+    border-radius: 16px;
+    box-shadow: 0 2px 16px rgba(0,0,0,.08);
     display: flex;
     flex-direction: column;
     gap: 8px;
-    margin-bottom: 8px;
-    margin-top: 8px;
 
     div {
         width: 100%;
@@ -199,5 +201,36 @@
     }
     100% {
         background-position: 0 50%
+    }
+}
+
+
+
+.product-page__aside-sticky {
+    display: flex;
+    flex-direction: column;
+
+    .mayak-wrapper-element-7613 {
+        order: 2;
+    }
+
+    .sppExtensionWidget {
+        order: 0;
+    }
+
+    .product-page__aside-container {
+        order: 1;
+        margin-bottom: 12px;
+    }
+}
+
+@media (max-width: 1023px) {
+
+    .sppExtensionWidget {
+        max-width: 488px;
+    }
+
+    .sppExtensionWidget {
+        margin-top: 12px;
     }
 }
