--- a/styles.css
+++ b/styles.css
@@ -39,6 +39,7 @@
             padding: 8px 16px 8px 16px;
             background-color: #3F51B5;
             color: white;
+            height: 48px !important;
             width: 100%;
             display: flex;
             flex-direction: column;
@@ -78,6 +79,7 @@
             background-color: #7986CB;
             color: white;
             width: 100%;
+            height: 23px !important;
             display: flex;
             font-size: 12px;
             font-weight: 700;
@@ -143,7 +145,7 @@
 
     .pulsate2 {
         width: 80%;
-        height: 48px;
+        height: 48px !important;
     }
     .pulsate3 {
         height: 28px;
